# rust-ddd

./: Cargo.toml
src/: main.rs
src/config/: database.rs  mod.rs
src/error/: api_error.rs  db_error.rs
src/routes/: mod.rs  root.rs  users_router.rs
src/user/: mod.rs  user_routes.rs  user_services.rs  user_state.rs
src/user/domain/: mod.rs  user.rs
src/user/domain/object_values/: course.rs
src/user/handlers/: get_users.rs
src/user/infastructure/persistance/entities/: user_entity.rs
src/user/infastructure/persistance/repositories/: mod.rs  user_create_repository.rs  user_read_repository.rs
src/user/ports/: create_repository.rs  mod.rs  read_repository.rs
src/user/services/: create_user_services.rs  mod.rs  read_user_services.rs
